--- a/design-thinking/practica1.html
+++ b/design-thinking/practica1.html
@@ -55,26 +55,24 @@
         <div class="think">
             <div class="think__img">
                 <img src="../img/introduccion.jpg" alt="">
+                <img src="../img/introduccion.jpg" alt="">
             </div>
             <div class="think__details">
                 <div class="think__details__icon">
                     <i class="icon-speech-streamline-talk-user"></i>
                 </div>
                 <div class="think__details__info">
-                    <p class="think__details__info__title">Propuesta del Proyecto de Lamparas LED</p>
-                    <p class="think__details__info__cont">Aquí podremos ver el seguimiento que se hizo para desarrollar antes de realizar nuestra propuesta sobre la fabricación de lamparas LED, el cual tendra un efecto positivo dependiendo del tipo de público al que esta dedicado.</p><a href="https://drive.google.com/open?id=1b0lstbUes_lW8iL-tbd433XI7ob72X-C">Documento</a>
+                    <p class="think__details__info__title">NUESTRA PROPUESTA</p>
+                    <p class="think__details__info__cont">En el sector comercio de nuestro país ha existido un pequeño problema que viene afectando no solo economicamente a las empresas sino tambien a sus clientes, si bien la perdida o robo de carritos de compras en varios establecimientos pasa muy desapercibido; pero luego de realizado una investigacion del tema notamos que la suma total de estos elementos de trabajo llega a una gran perdida económica. Nuestra propuesta como solucion a este problema es el sistema antirrobo que se instalara colocando en los carritos un dispositivo que bloquea las ruedas de este si se supera determinada zona. Así, los clientes solo pueden circular con él por el espacio del supermercado y el aparcamiento. Pero luego de salir de cierta zona permitida las ruedas del carrito se bloquearán de forma automática dejándolo inutilizado. La cadena informará con un cartel que se ubicará en las entradas y salidas en algunos de sus locales de la implantación de este sistema que frena el carro de la compra en seco.</p><a href="http://www.mercuriocalama.cl/prontus4_nots/site/artic/20050209/pags/20050209045621.html">Articulo de perdida y robos de carritos de super.</a>
                 </div>
-
-                <!-- <div class="think__details__extra">
-                    <p class="think__details__extra__title">Respuestas</p>
-                    <p>En el presente documento se muestra el análisis total del problema, basándonos en las respuestas de los encuestados.</p>
-                    <a href="https://drive.google.com/open?id=1K4NFkj3El4lRBq5SVDEvw3mak2-1AWdu" target="_blank" class="think__details__extra__description">Documento - Respuestas</a>
+                <div class="think__details__info">
+                    <p class="think__details__info__title">IMPACTO SOCIAL Y ECONOMICO</p>
+                    <p class="think__details__info__cont">La propuesta realizada mostrara un impacto en la sociedad que recurre a estos supermercados,  ya que en principio los carritos no serán escasos y serán utilizados en su totalidad ya que se implementara dos tipos de rangos uno para los carritos pequeños que tendrán un límite menor ya que son los más necesarios y otro tipo de rango para los carritos que transportan mayor cantidad de mercadería, su rango será hasta el aparcamiento de los autos, como resultado los coches pequeños  no estarán botados demasiado alejados y de mayor facilidad para ser utilizados, de esta manera también evitara que estos lleguen a ser dañados o extraviados.</p>
                 </div>
-                <div class="think__details__extra">
-                    <p class="think__details__extra__title">Respuestas Encuesta</p>
-                    <p>En el presente archvo muestra a detalle los resultados de la encuesta a los estudiantes, sobre el servicio de atención en ambas cafeterías.</p>
-                    <a href="https://drive.google.com/open?id=1PHGLUB1CPTJZH-x0X2J5i2ZnAt8MoD09" target="_blank" class="think__details__extra__description">Documento - Respuestas Encuesta</a>
-                </div> -->
+                <div class="think__details__info">
+                    <p class="think__details__info__title">PROPUESTA BASADA EN LA REALIDAD Y OPORTUNIDADES EN LA REGION</p>
+                    <p class="think__details__info__cont">Esta propuesta esta siendo evaluada  bajo términos de que muestra una serie de insatisfacción, de que una persona al llegar y estar dentro del supermercado pero al verse en la necesidad de tomar un carrito para compras mayores,  pero estos están ahí botados por los estacionamientos lo cual le impide contar con uno y estar esperando que alguno lo desocupe,  dado esto al incorporarse esta tecnología infrarroja que bloqueara las ruedas del carrito evitando ser llevadas fuera de rango como dando mayor utilidad a los carritos , evitando posibles robos y accidentes ya que al ser sacados fuera del mismo supermercado por negligencia de las personas  estos no tienen ningún tipo de freno y asi se de la posibilidad de que estén en media calle provocando diversos accidentes.</p>
+                </div>
             </div>
         </div>
     </div>
