--- a/design-thinking/practica2.html
+++ b/design-thinking/practica2.html
@@ -49,21 +49,47 @@
                 <h1>Taller De Design Thinking</h1>
             </div>
             <div class="think__title__content">
-                <p>...</p>
+                <p>Debemos tener muy claro que aún no hemos pensado en ninguna solución que resuelva el reto, hay que confiar en el proceso y no anticiparnos en dar una solución. Esta es una de las tareas más complicadas ya que todos tenemos nuestras ideas pensadas y nos apresuramos en dar una solución.</p>
             </div>
         </div>
 
         <div class="think">
             <div class="think__img">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/sa6NlNtQo8c" frameborder="0" allowfullscreen></iframe>
+            <div class="think__details__extra">
+                    <p class="think__details__extra__title">Fases del Design Thinking</p>
+                    <IMG src="../img/EmpatizaDT.jpg" width="200" height="250"/>
+                    <p>En esta primera fase debemos observar al usuario y empatizar con él. Si les preguntamos a los usuarios es muy probable que nos mientan ya sea consciente o inconscientemente, así que la clave de esta fase es el trabajo en campo.</p>
+                    <IMG src="../img/DefineDT.jpg" width="200" height="250"/>
+                    <p>Ahora toca analizar y resumir la información obtenida en el punto anterior. Tenemos la pared llena de posits con el mapa de empatía y el customer journey, pero esto es inmanejable, por lo que debemos definir un problema concreto que será el que debamos solucionar.</p>
+                    <IMG src="../img/IdeaDT.jpg" width="200" height="250"/>
+                    <p>Llegados a este punto es donde podemos dejar fluir toda la creatividad del grupo. Como he comentado al principio es muy importante no dar soluciones o ideas a nuestro reto hasta que no llega este momento, en el que ya tenemos perfectamente definido el punto de vista del usuario.</p>
+                    <IMG src="../img/PrototipaDT.jpg" width="200" height="250"/>
+                    <p>Cuando hemos seleccionado las ideas hay que hacerlas tangibles, es decir, realizar un prototipo de cada una. Lo importante es que este primer prototipo sea lo más sencillo posible y no suponga un coste elevado, ni implique demasiado tiempo en su desarrollo.</p>
+                    <IMG src="../img/TesteaDT.jpg" width="200" height="250"/>
+                    <p>Esta sería la fase final de esta metodología. Una vez llegados a este punto, se debe entregar el prototipo de la idea seleccionada al cliente o usuario para comprobar si realmente resolvemos su problema.</p>
+                </div>
             </div>
             <div class="think__details">
                 <div class="think__details__icon">
                     <i class="icon-speech-streamline-talk-user"></i>
                 </div>
                 <div class="think__details__info">
-                    <p class="think__details__info__title">Design Thinking</p>
-                    <p class="think__details__info__cont">Realizamos las metodologias usadas frecuentemente en el Design Thinking en el desarrollo de nuestro proyecto de lamparas LED con acrilico.</p><a href="https://drive.google.com/open?id=1b0lstbUes_lW8iL-tbd433XI7ob72X-C">Documento</a>
+                    <p class="think__details__info__title">DESIGN THINKING</p>
+                    <p class="think__details__info__cont">Empezaremos diciendo que es una metodología usada por los diseñadores de una marca o empresa; el Design Thinking se refiere a generar cualquier tipo de ideas innovadoras a la hora de crear la imagen de por ejemplo, productos o servicios, que tiendan a satisfacer de mejor manera las necesidades de los usuarios haciéndolos parte activa del proceso de creación.
+                </div>  
+                <div class="think__details__info">
+                    <p class="think__details__info__title">DESARROLLAMOS EL TALLER EN NUESTRO PROYECTO</p>
+                    <p class="think__details__extra__title">Empatizar</p>
+                    <p>Desde hace unos años llegaron los mega centros en ellos podemos encontrar lo que son tiendas de diversas categorías, pero las más asistidas son los supermercados los cuales tenían un problema que es la perdida, daños o incluso robos de sus carritos de compra. Para esto realizamos primero un análisis en el comportamiento de los clientes que suelen alejar del establecimiento y esto perjudica al supermercado y las acciones que realiza la empresa como respuesta ante esta situación.</p>
+                    <p class="think__details__extra__title">Definir</p>
+                    <p>Una vez realizada la recopilación de información en la fase anterior, definiremos el problema para enfocarlo correctamente y de esta manera determinaremos que marcará su éxito; ahora debemos generar un interés en las empresas y clientes para que nuestro producto, de esta manera podremos recopilar mas ideas y calificarlas, así lograr que nuestra propuesta sea de fácil comprensión y adaptación.</p>
+                    <p class="think__details__extra__title">Idear</p>
+                    <p>Luego tener enfocado el problema de los carritos registramos todas las ideas que puedan dar solución a este problema de esta manera vemos las mejores opciones que eviten la perdida de carritos siendo entre implementar un sistema de seguridad o aumentando el personal en el establecimiento.</p>
+                    <p class="think__details__extra__title">Prototipar</p>
+                    <p>Puede ser que al principio solo algunos establecimientos apoyen nuestra idea sin embargo realizando pruebas en la cual pueda ser mostrado al cliente y a la empresa; de esta manera podremos ver sus reacciones y comentarios, lo cual nos genera mas ideas que puedan mejorar mucho más nuestro producto.</p>
+                    <p class="think__details__extra__title">Testear</p>
+                    <p>Dejamos que los usuarios interactúen con nuestro producto y que nos brinden su opinión respecto a los limites de distancias para ser usado los caritos de compras; luego respondemos a sus dudas y realizamos un contexto y situación perfecto para realizar nuestro producto final.</p>
                 </div>
                 </div>
             </div>
