--- a/design-thinking/practica3.html
+++ b/design-thinking/practica3.html
@@ -49,29 +49,39 @@
                 <h1>Empatizar</h1>
             </div>
             <div class="think__title__content">
-                <p>... <br> ...</p>
+                <p>Tenemos que salir y ver lo que realmente ocurre en la calle, ponernos en la piel del usuario y, sobre todo, observar. Hay que pasar por donde pasa el cliente, tanto física como emocionalmente.</p>
             </div>
         </div>
 
         <div class="think">
             <div class="think__img">
-                <iframe width="560" height="315" src="https://www.youtube.com" frameborder="0" allowfullscreen></iframe>
+                <img src="../img/Empatizar.jpg" alt="">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/RcU_GgjjQD8" frameborder="0" allowfullscreen></iframe>
             </div>
             <div class="think__details">
                 <div class="think__details__icon">
                     <i class="icon-chaplin-hat-movie-streamline"></i>
                 </div>
                 <div class="think__details__info">
-                    <p class="think__details__info__title">Empatizamos</p>
-                    <p class="think__details__info__cont">Realizamos los pasos seguidos en el tema de Empatixar para desarrollar nuestro proyecto con total exito.</p>
+                    <p class="think__details__info__title">UTILIZAMOS LAS TECNICAS DE EMPATIZAR</p>
+                    <p class="think__details__extra__title">Se realiza una observación del comportamiento de las personas y llegamos a lo siguiente:</p>
+                    <p class="think__details__info__cont">En  algunos supermercados entre otros lugares en los cuales se requieren carritos de compras, pasa muy seguido que los carritos lo sacan del local de donde deberían estar y luego no los regresan al local. De esta manera se podrían producir robos o simplemente perdidas de estos carritos, para ello es importante tener una forma de mantener el orden de estos, para evitar pérdidas. También se pudo observar que algunos no solo sacan el carrito para tomar taxi o llevarlos a sus vehículos particulares, sino que los sacan del local y siguen haciendo compras en otras tiendas fuera del local, lo cual también es un riesgo que produce perdidas de los mismos.</p>
+                    <p class="think__details__extra__title">Se observan los medios y las formas que algunas tiendas tienen para el control de estos carritos:</p>
+                    <p class="think__details__info__cont">En algunos casos y en la mayoría tienen a gente supervisando que no se alejen los carritos del local, sin embargo esto obliga a estas personas a acompañar a los compradores hacia sus vehículos para regresas los carritos, esto a la vez genera desorden entre el personal del local. En otros casos este  personal es burlado pudiendo así sacar los carritos sin problemas, como también en otros locales hacen uso de cámaras de vigilancia, pero esto solo es para observar que pasa mas no hace nada por controlarlo, solo es para saber que está pasando.</p>
+                    <p class="think__details__info__title">RECOPILA VARIADA INFORMACIÓN SOBRE LA PROBLEMÁTICA</p>
+                    <p>Según algunas estadísticas hasta 150 carritos se pueden perder en el transcurso del año en Arequipa, entre moles, supermercados, tiendas grandes, etc.
+                    El problema con los carros de supermercados parece no tener solución. Los reclamos por la presencia de estos móviles en distintos puntos de Arequipa, siendo utilizados como basureros o por vendedores ambulantes, van en aumento cada cierto tiempo. El tema vuelve a estar en discusión. ¿Pero cómo llegan allí?, ¿los encuentran?, ¿los compran? Podemos salir a la  calle para constatar cómo es que los “carritos” salen de su lugar de origen. 
+                    Con la pérdida de estos carritos de compras podemos distinguir entre sus pérdidas como:</p>
+                    <p class="think__details__extra__title">1.UNA PRÁCTICA HABITUAL</p>
+                    <p class="think__details__info__cont">“Si eso no es novedad, aquí la gente se lleva los carros todo el tiempo, y no es de ahora, es de siempre”. Preguntamos a algunos trabajadores. El trabajo de estos jóvenes y de sus compañeros durante el turno de la mañana consiste sólo en ordenar los móviles que las personas dejan en los estacionamientos, y según asegura él mismo, “quedan ahí, en cualquier lado. A veces tenemos que correr por las bocinas de los autos debido a que no pueden estacionarlos”, comenta.Lo que nos cuenta es ratificado por otro trabajador del supermercado quien lleva años dedicado al oficio y quien además expresa su impotencia cuando ve que la gente sale “como si nada”, con el implemento que le pertenece a la empresa.
+                    Podemos observar que esto puede convertirse en un hábito.</p>
+                    <p class="think__details__extra__title">2.DE LARGA DATA.</p>
+                    <p class="think__details__info__cont">No es la primera vez que en el sector surgen reclamos debido a la presencia de los carros en las calles. Al caminar por algunos sectores de la ciudad se pueden ver algunos carritos con basura, a algunos no les incomoda. Pero no todos opinan lo mismo a mucha gente le parece inapropiado e incluso molesto ver estas unidades por la calles.</p>
+                    <p class="think__details__extra__title">3.PROBLEMA GENERALIZADO.</p>
+                    <p class="think__details__info__cont">No sólo en las cercanías de los supermercados es dónde están abandonados los carros. En un recorrido por el centro pudimos darnos cuenta que el problema es generalizado. En lugares típicos de Arequipa, como el Cercado, Socabaya, e incluso por la Plaza de Armas, encontramos carros algunas veces, algunos abandonados y aun siendo ocupados para otros fines.El tema no es nuevo, pero al parecer seguidamente es simplemente ignorado.</p>
                     <ul>
                     </ul>
                 </div>
-
-                <div class="think__details__extra">
-                    <p class="think__details__extra__title">Título</p>
-                    <p>En Desarrollo</p>
-                    <a href="https://drive.google.com/open?id=1IG-9r4DSwiQXrhSlOli6X_NLich0UxHL" target="_blank" class="think__details__extra__description">Documento - BrainStorm - 7 Sombreros</a>
                 </div>
             </div>
         </div>
