--- a/design.html
+++ b/design.html
@@ -59,10 +59,10 @@
                 </div>
                 <div class="design__item__info">
                     <a href="design-thinking/practica1.html" class="design__item__info__title">Planteamiento del Proyecto de Design Thinking</a>
-                    <p class="design__item__info__details">Realizamos una encuesta a estudiantes, docentes para determinar si el proyecto seria aceptado por la comunidad.</p>
+                    <p class="design__item__info__details">Realizamos la eleccion de nuestro producto en base al analisis de varias propuestas que buscan dar solucion a un problema en comun que tienen los centros comerciales.</p>
                 </div>
                 <div class="design__item__img">
-                    <img src="img/Trabajando.png" alt="">
+                    <img src="img/Planteamiento.jpg" alt="">
                 </div>
             </div>
             <div class="design__item">
@@ -71,10 +71,10 @@
                 </div>
                 <div class="design__item__info">
                     <a href="design-thinking/practica2.html" class="design__item__info__title">Taller De Design Thinking</a>
-                    <p class="design__item__info__details">En desarrollo.</p>
+                    <p class="design__item__info__details">Antes de comenzar con el desarrollo de nuestro producto realizaremos un analisis de los metodos usados en el Design Thinking para que luego estas sean aplicadas a nuestro producto, el cual tiene como fin resolver una problematica encontrada en nuestra ciudad.</p>
                 </div>
                 <div class="design__item__img">
-                    <img src="img/Trabajando.png" alt="">
+                    <img src="img/TallerDT.jpg" alt="">
                 </div>
             </div>
 
@@ -84,10 +84,10 @@
                 </div>
                 <div class="design__item__info">
                     <a href="design-thinking/practica3.html" class="design__item__info__title">Empatizar</a>
-                    <p class="design__item__info__details">En desarrollo.</p>
+                    <p class="design__item__info__details">Aqui aplicamos el método de empatizar en nuestra propuesta, realizando un analisis de las empresas involucradas en este problema y los clientes que usan estos servicios.</p>
                 </div>
                 <div class="design__item__img">
-                    <img src="img/Trabajando.png" alt="">
+                    <img src="img/Empatizar.jpg" alt="">
                 </div>
             </div>
             <div class="design__item">
