--- a/en/design.html
+++ b/en/design.html
@@ -59,10 +59,10 @@
                 </div>
                 <div class="design__item__info">
                     <a href="design-thinking/practica1.html" class="design__item__info__title">Approach of the Design Thinking Project</a>
-                    <p class="design__item__info__details">We conducted a survey to students, teachers to determine if the project would be accepted by the community.</p>
+                    <p class="design__item__info__details">We make the choice of our product based on the analysis of several proposals that seek to solve a common problem that shopping centers have.</p>
                 </div>
                 <div class="design__item__img">
-                    <img src="../img/Trabajando.png" alt="">
+                    <img src="../img/Planteamiento.jpg" alt="">
                 </div>
             </div>
             <div class="design__item">
@@ -71,10 +71,10 @@
                 </div>
                 <div class="design__item__info">
                     <a href="design-thinking/practica2.html" class="design__item__info__title">Design Thinking Workshop</a>
-                    <p class="design__item__info__details">Developing.</p>
+                    <p class="design__item__info__details">Before beginning with the development of our product we will carry out an analysis of the methods used in the Design Thinking so that later these are applied to our product, which has as purpose to solve a problematic found in our city.</p>
                 </div>
                 <div class="design__item__img">
-                    <img src="../img/Trabajando.png" alt="">
+                    <img src="../img/TallerDT.jpg" alt="">
                 </div>
             </div>
 
@@ -84,10 +84,10 @@
                 </div>
                 <div class="design__item__info">
                     <a href="design-thinking/practica3.html" class="design__item__info__title">Empathize</a>
-                    <p class="design__item__info__details">Developing.</p>
+                    <p class="design__item__info__details">Here we apply the method of empathizing in our proposal, making an analysis of the companies involved in this problem and the clients that use these services.</p>
                 </div>
                 <div class="design__item__img">
-                    <img src="../img/Trabajando.png" alt="">
+                    <img src="../img/Empatizar.jpg" alt="">
                 </div>
             </div>
 
