--- a/en/index.html
+++ b/en/index.html
@@ -81,7 +81,7 @@
                 </div>
                 <div class="team__item__description">
                     <p class="team__item__description__name">Alexcy Antony Choque Chura</p>
-                    <p class="team__item__description__info">I am a young person who is currently studying the technical career of Industrial Electrotechnics and I aim to use the knowledge acquired for the development of my goals.</p>
+                    <p class="team__item__description__info">I am a young man who is currently studying the technical career of Industrial Electrotechnics; I have basic knowledge in electronics and computer science. My objective is to obtain knowledge that can be very useful in future technological projects.</p>
                     <p class="team__item__description__cal">Qualification: <strong>90%</strong></p>  
                     <a href="mailto:alexcy.choque@tecsup.edu.pe" class="team__item__description__mail">alexcy.choque@tecsup.edu.pe</a>
                 </div>
@@ -92,14 +92,14 @@
                 </div>
                 <div class="team__item__description">
                     <p class="team__item__description__name">Natanael Josue Apaza Arias </p>
-                    <p class="team__item__description__info">I am currently a student of Industrial Electrotechnics and I intend to capture some of my knowledge when carrying out some projects.</p> 
+                    <p class="team__item__description__info">I am currently a student of Industrial Electrotechnics, I am interested in topics related to technology and with it also basic knowledge in electronic matters; I intend to capture some of my knowledge when carrying out some projects.</p> 
                     <p class="team__item__description__cal">Qualification: <strong>90%</strong></p>  
                     <a href="mailto:natanael.apaza@tecsup.edu.pe" class="team__item__description__mail">natanael.apaza@tecsup.edu.pe</a>
                 </div>
             </div>
             <div class="team__item">
                 <div class="team__item__img">
-                    <img src="img/Natanael.jpg" alt="">
+                    <img src="img/Eddie.jpg" alt="">
                 </div>
                 <div class="team__item__description">
                     <p class="team__item__description__name">Eddie Armando Mollesaca Zela</p>
@@ -114,7 +114,7 @@
                 </div>
                 <div class="team__item__description">
                     <p class="team__item__description__name">Dereck Johnny Zuñiga Concha </p>
-                    <p class="team__item__description__info">I am a student of the Tecsup high school, where I am currently pursuing a technical career which will help me achieve my goals.</p>
+                    <p class="team__item__description__info">I am a student of the Tecsup higher school, where I am currently pursuing a technical career related to technology issues; I develop themes based on electricity and also the use of softwares that help the development of this.</p>
                     <p class="team__item__description__cal">Qualification: <strong>90%</strong></p>   
                     <a href="mailto:zuniga.dereck@tecsup.edu.pe" class="team__item__description__mail">zuniga.dereck@tecsup.edu.pe</a>
                 </div>
@@ -125,7 +125,7 @@
                     </div>
                     <div class="team__item__description">
                         <p class="team__item__description__name">Luis Gustavo Pari Rodriguez</p>
-                        <p class="team__item__description__info">I have interests in issues related to the manufacture of new technological products that are very useful for the general public.</p>
+                        <p class="team__item__description__info">I have interests in issues related to the manufacture of new technological products that are very useful for the general public, for this I use knowledge acquired in my technical career in electrical engineering.</p>
                         <p class="team__item__description__cal">Qualification: <strong>85%</strong></p>  
                         <a href="mailto:luis.pari@tecsup.edu.pe" class="team__item__description__mail">luis.pari@tecsup.edu.pe</a>
                     </div>
