--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 </div>
                 <div class="team__item__description">
                     <p class="team__item__description__name">Alexcy Antony Choque Chura</p>
-                    <p class="team__item__description__info">Soy un joven que actualmente estudia la carrera tecnica de Electrotecnia Industrial y tengo como objetivo utilizar los conocimientos adquiridos para el desarrollo de mis metas.</p>
+                    <p class="team__item__description__info">Soy un joven que actualmente estudia la carrera tecnica de Electrotecnia Industrial; tengo conocimientos basicos en electronica y en informatica. Mi objetivo es obtener conocimientos que puedan ser de mucha utilidad en futuros proyectos tecnologicos.</p>
                     <p class="team__item__description__cal">Calificación: <strong>69%</strong></p>  
                     <a href="mailto:alexcy.choque@tecsup.edu.pe" class="team__item__description__mail">alexcy.choque@tecsup.edu.pe</a>
                 </div>
@@ -91,14 +91,14 @@
                 </div>
                 <div class="team__item__description">
                     <p class="team__item__description__name">Natanael Josue Apaza Arias</p>
-                    <p class="team__item__description__info">Actualmente soy un estudiante de Electrotecnia Industrial y pienso plasmar algunos de mis conocimientos al realizar algunos proyectos.</p>
+                    <p class="team__item__description__info">Actualmente soy un estudiante de Electrotecnia Industrial, tengo interes por temas relacionados con la tecnologia y con ello tambien conocimientos basicos en materias de electronica; pienso plasmar algunos de mis conocimientos al realizar algunos proyectos.</p>
                     <p class="team__item__description__cal">Calificacion: <strong>90%</strong></p>  
                     <a href="mailto:natanael.apaza@tecsup.edu.pe" class="team__item__description__mail">natanael.apaza@tecsup.edu.pe</a>
                 </div>
             </div>
             <div class="team__item">
                 <div class="team__item__img">
-                    <img src="img/Natanael.jpg" alt="">
+                    <img src="img/Eddie.jpg" alt="">
                 </div>
                 <div class="team__item__description">
                     <p class="team__item__description__name">Eddie Armando Mollesaca Zela</p>
@@ -113,7 +113,7 @@
                 </div>
                 <div class="team__item__description">
                     <p class="team__item__description__name">Dereck Johnny Zuñiga Concha</p>
-                    <p class="team__item__description__info">Soy un alumno del instituto superior Tecsup, donde actualmente curso una carrera tecnica el cual me ayudara a lograr mis metas.</p>
+                    <p class="team__item__description__info">Soy un alumno del instituto superior Tecsup, donde actualmente curso una carrera tecnica relacionada con temas de tecnolgia; desarrollo temas basados en electricidad y tambien el uso de softwares que ayudan al desarrollo de este.</p>
                     <p class="team__item__description__cal">Calificación: <strong>90%%</strong></p>  
                     <a href="mailto:zuniga.dereck@tecsup.edu.pe" class="team__item__description__mail">zuniga.dereck@tecsup.edu.pe</a>
                 </div>
@@ -124,7 +124,7 @@
                     </div>
                     <div class="team__item__description">
                         <p class="team__item__description__name">Luis Gustavo Pari Rodriguez</p>
-                        <p class="team__item__description__info">Tengo intereses en cuestiones relacionadas con la fabricación de nuevos productos tecnológicos que son muy útiles para el público en general.</p>
+                        <p class="team__item__description__info">Tengo intereses en cuestiones relacionadas con la fabricación de nuevos productos tecnológicos que son muy útiles para el público en general, para ello uso conocimientos adquiridos en mi carrera tecnica de electrotecnia.</p>
                         <p class="team__item__description__cal">Calificación: <strong>85%</strong></p>   
                         <a href="mailto:luis.pari@tecsup.edu.pe" class="team__item__description__mail">luis.pari@tecsup.edu.pe</a>
                     </div>
