--- a/en/design-thinking/practica1.html
+++ b/en/design-thinking/practica1.html
@@ -55,28 +55,25 @@
         <div class="think">
             <div class="think__img">
                 <img src="../../img/introduccion.jpg" alt="">
+                <img src="../../img/introduccion.jpg" alt="">
             </div>
             <div class="think__details">
                 <div class="think__details__icon">
                     <i class="icon-speech-streamline-talk-user"></i>
                 </div>
                 <div class="think__details__info">
-                    <p class="think__details__info__title">Introduction to Design Thinking</p>
-                    <p class="think__details__info__cont">Here we can see the follow-up that was done to develop before making our proposal on the manufacture of LED lamps, which will have a positive effect depending on the type of public to which it is dedicated.</p><a href="https://drive.google.com/open?id=1b0lstbUes_lW8iL-tbd433XI7ob72X-C">Documento</a>
-
-                    
+                    <p class="think__details__info__title">OUR PROPOSAL</p>
+                    <p class="think__details__info__cont">In the trade sector of our country there has been a small problem that has affected not only companies but also their customers economically, although the loss or theft of shopping carts in several establishments goes unnoticed; but after carrying out an investigation of the subject we noticed that the sum total of these elements of work arrives at a great economic loss. Our proposal as a solution to this problem is the anti-theft system that will be installed by placing a device in the trolleys that blocks the wheels if a certain zone is exceeded. Thus, customers can only circulate with him for the space of the supermarket and parking. But after leaving a certain area allowed the wheels of the cart will be blocked automatically leaving it unusable. The chain will inform with a sign that will be located in the entrances and exits in some of its premises of the implantation of this system that stops the car of the purchase in dry.</p><a href="http://www.mercuriocalama.cl/prontus4_nots/site/artic/20050209/pags/20050209045621.html">Articulo de perdida y robos de carritos de super.</a>
                 </div>
 
-                <!-- <div class="think__details__extra">
-                    <p class="think__details__extra__title">Respuestas</p>
-                    <p>En el presente documento se muestra el análisis total del problema, basándonos en las respuestas de los encuestados.</p>
-                    <a href="https://drive.google.com/open?id=1K4NFkj3El4lRBq5SVDEvw3mak2-1AWdu" target="_blank" class="think__details__extra__description">Documento - Respuestas</a>
+                <div class="think__details__info">
+                    <p class="think__details__info__title">SOCIAL AND ECONOMIC IMPACT</p>
+                    <p class="think__details__info__cont">The proposal made will have an impact on the society that resorts to these supermarkets, since in principle the carts will not be scarce and will be used in full since two types of ranges will be implemented, one for small carts that will have a lower limit since are the most necessary and another type of range for the carts that transport more quantity of merchandise, its range will be up to the parking of the cars, as a result the small cars will not be thrown too far and easier to be used, in this way it will also prevent them from being damaged or lost.</p>
                 </div>
-                <div class="think__details__extra">
-                    <p class="think__details__extra__title">Respuestas Encuesta</p>
-                    <p>En el presente archvo muestra a detalle los resultados de la encuesta a los estudiantes, sobre el servicio de atención en ambas cafeterías.</p>
-                    <a href="https://drive.google.com/open?id=1PHGLUB1CPTJZH-x0X2J5i2ZnAt8MoD09" target="_blank" class="think__details__extra__description">Documento - Respuestas Encuesta</a>
-                </div> -->
+                <div class="think__details__info">
+                    <p class="think__details__info__title">PROPOSAL BASED ON REALITY AND OPPORTUNITIES IN THE REGION</p>
+                    <p class="think__details__info__cont">This proposal is being evaluated under terms that show a series of dissatisfaction, that a person arriving and being inside the supermarket but seeing the need to take a cart for larger purchases, but these are there thrown by the parking lots which it prevents you from having one and waiting for someone to vacate it, given this when incorporating this infrared technology that blocks the wheels of the cart avoiding being taken out of range as giving greater utility to the carts, avoiding possible thefts and accidents since being removed outside the same supermarket due to the negligence of the people they do not have any type of brake and thus the possibility that they are in the middle of the street causing various accidents.</p>
+                </div>
             </div>
         </div>
     </div>
