--- a/FabLab-InovacionT-master/proyecto-final/semana2.html
+++ b/FabLab-InovacionT-master/proyecto-final/semana2.html
@@ -48,8 +48,11 @@
             <div class="think__title__text">
                 <h1>Desarrollo de Planos 2D y/o 3D</h1>
             </div>
+            <div class="think__title__content">
+                <p>Se realiza los diseños en 2D con el uso de softwares como AutoCAD y CorelDraw para realizar un diseño de producto flexible a cambios.</p>
+            </div>
         </div>
-<div class="think">
+        <div class="think">
             <div class="think__img">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/Y_gt7C68uKs" frameborder="0" allowfullscreen></iframe>
             </div>
@@ -60,12 +63,19 @@
                 </div>
                 <div class="think__details__info">
                     <p class="think__details__info__title">Diseño de Planos</p>
-                    <p class="think__details__info__cont">Aqui se mostrara los primeros diseños tanto de la base como de nuestros grabados que seran realizados para nuestra lampara acrilica.</p>
+                    <p class="think__details__info__cont">Aqui mostramos el desarrollo previo de los diseños en AutoCAD; tambien utilizamos herrameintas importantes como los Parametricos.</p>
+                    <img src="../img/Pezportada.jpg" alt="">
+                    <p class="think__details__extra__title">Parametricos</p>
+                    <p class="think__details__extra__description">El dibujo paramétrico es una tecnología que se utiliza para diseñar utilizando restricciones, que son asociaciones y restricciones aplicadas a la geometría 2D. 
+                        Existen dos tipos de restricciones generales:
+                    Las restricciones geométricas controlan las relaciones entre los objetos.
+                    Las restricciones por cota controlan los valores de distancia, longitud, ángulo y radio de los objetos</p>
                 </div>
                 <div class="think__details__extra">
                     <p class="think__details__extra__title">Planos en 2D y 3D en AutoCAD.</p>
                     <p class="think__details__extra__description">Con el uso del Software AutoCAD realizamos un primer plano de lo que sera nuestra base y laminas de esta manera se podra entender mejor el diseño del proyecto.</p>
                     <a href="https://drive.google.com/open?id=1hRNwAntPGr6DpjdnLUHDk0NsheobDe6j" target="_blank">Documento - Cálculos Basado al diseño</a>
+                    <IMG src="../img/autocad.jpg" width="400" height="500"/>
                 <div class="think__details__extra">
                     <p class="think__details__extra__title">Diseños e informe</p>
                     <p class="think__details__extra__description">Aqui compartimos los diseños previos al desarrollo del taller y damos a conocer un poco mas de las caracteristicas de nuestro producto que lo hacen flexible a cambios.</p>
