--- a/FabLab-InovacionT-master/proyecto-final/semana3.html
+++ b/FabLab-InovacionT-master/proyecto-final/semana3.html
@@ -48,9 +48,9 @@
             <div class="think__title__text">
                 <h1>Ejecución de Proyecto Final</h1>
             </div>
-            <!-- <div class="think__title__content">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore officiis deleniti temporibus, recusandae et perferendis libero, eos quidem, maiores labore blanditiis laboriosam tempora architecto eaque velit consequatur quam odio hic!</p>
-            </div> -->
+            <div class="think__title__content">
+                <p>Aqui realizaremos el desarrollo de nuestro proyecto, siguientes los pasos ya descatados anteriormente en los puntos anteriores.</p>
+            </div>
         </div>
 
         <div class="think">
@@ -62,19 +62,34 @@
                     <i class="icon-design-graphic-tablet-streamline-tablet"></i>
                 </div>
                 <div class="think__details__info">
-                    <p class="think__details__info__title">Título</p>
-                    <p class="think__details__info__cont">En Desarrollo.</p>
+                    <p class="think__details__info__title">JUSTIFICACION DEL PROYECTO</p>
+                    <p class="think__details__info__cont">Nuestro producto será producido con un material elegido por ciertas circunstancias como, velocidad de producción, durabilidad y costo.</p>
                 </div>
 
                 <div class="think__details__extra">
-                    <p class="think__details__extra__title">...</p>
-                    <p>En Desarrollo.</p>
-                    <div class="think__details__extra__description"><a href="https://drive.google.com/file/d/11rheWf4l_ERvf0U8q5jPEm75jaxn6xG_/view?usp=sharing" target="_blank">Documento - Diagrama 2D y 3D</a></div>
+                    <p class="think__details__extra__title">Resistente</p>
+                    <p>Primero vamos a destacar el uso de materiales resistentes o de larga duración, como el uso de láminas de acrílico transparente, para obtener un excelente grabado y al momento de realizar el armado de la lámpara, este produzca un mayor efecto con las luces LED.</p>
+                    <img src="../img/ACRILICO.jpg" alt="">
                 </div>
                 <div class="think__details__extra">
-                    <p class="think__details__extra__title">...</p>
-                    <p class="think__details__extra__description">En Desarrollo.</p>
-                    <a href="https://drive.google.com/drive/folders/1p4fRTwta_wBYXIyBpUkWmHSEy8_nh5m0?usp=sharing" target="_blank">Archivos - Diagrama 2D y 3D</a>
+                    <p class="think__details__extra__title">Durabilidad</p>
+                    <p class="think__details__extra__description">El acrílico al ser un polímero nos garantiza mayor durabilidad, lo que lo hace resistente a caídas e incluso a ralladuras menores sin afectar su efecto que obtendrá con el uso de las cintas LED.</p>
+                    <img src="../img/RESISTENTE.jpg" alt="">
+                </div>
+                <div class="think__details__extra">
+                    <p class="think__details__extra__title">Costo</p>
+                    <p class="think__details__extra__description">Los materiales usados son fáciles de conseguir y también de bajo costo, de esto modo aminoramos el costo de producción y nos permite realizar modificaciones que contribuyan a la producción de nuestro producto sin elevar los precios.</p>
+                    <img src="../img/COSTO.jpg" alt="">
+                    <div class="think__details__info">
+                    <p class="think__details__info__title">ANIMALES Y SUPERHEROES</p>
+                    <p class="think__details__info__cont">Nuestros primeros dos diseños es a elección de los gustos del cliente, sin embargo, el diseño puede cambiar y estar sujeto solo a las tendencias del momento.</p>
+                </div>
+                    <img src="../img/Spiderportada.jpg" alt="">
+                    <p class="think__details__extra__description">Este diseño fue realizado para un tipo de público más joven y así como éstos existen otros diseños variados que son atractivos para un público más juvenil.</p>
+                    
+                    <img src="../img/Pezportada.jpg" alt="">
+                    <p class="think__details__extra__description">Este diseño es más elegante con temática de animales o cosas abstractas que producen un ambiente más cómodo y agradable a la vista, hecho para un público mayor que no gusta de temas llamativos como series, comics o videojuegos.</p>
+                   
                 </div>
             </div>
         </div>
